{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 358,
  "lineage": "828f326e-788c-9291-a4a8-105d64c6ff33",
  "resources": [
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_eip",
      "name": "testEip1",
      "each": "list",
      "provider": "module.rds.provider.aws"
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "testEip1",
      "each": "list",
      "provider": "module.bastion.provider.aws"
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "testEip1",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04b67a79ff3cc82d7",
            "public_dns": "ec2-52-6-18-8.compute-1.amazonaws.com",
            "public_ip": "52.6.18.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_eip",
      "name": "testEip2",
      "each": "list",
      "provider": "module.rds.provider.aws"
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "testEip2",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02913accd809d6b9d",
            "public_dns": "ec2-52-204-116-47.compute-1.amazonaws.com",
            "public_ip": "52.204.116.47",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_eip",
      "name": "testEip3",
      "each": "list",
      "provider": "module.rds.provider.aws"
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "testEip3",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0c7d0c523ac2511aa",
            "public_dns": "ec2-54-172-56-112.compute-1.amazonaws.com",
            "public_ip": "54.172.56.112",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "module.bastion.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d496c26aa745869",
            "arn": "arn:aws:ec2:us-east-1:032037257384:instance/i-0dc9b9914bb980a88",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc9b9914bb980a88",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f820ce3167a594e5",
            "private_dns": "ip-140-0-1-38.ec2.internal",
            "private_ip": "140.0.1.38",
            "public_ip": "35.175.251.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-024e75819c37acd3d",
                "volume_size": 32,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-092bad2bad503af3b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee8b1e15d4c9d7d2",
            "tags": {
              "Name": "nhlprod2020"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-092bad2bad503af3b"
            ]
          },
          "dependencies": [
            "module.bastion.aws_security_group.objawssec1",
            "module.bastion.aws_subnet.awsobj1ta",
            "module.bastion.aws_vpc.aws_obj",
            "module.networks.aws_subnet.awsobj1ta",
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_obj",
      "each": "list",
      "provider": "module.rds.provider.aws"
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_obj",
      "each": "list",
      "provider": "module.bastion.provider.aws"
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_obj",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06e33ea6a1a776568",
            "owner_id": "032037257384",
            "tags": {
              "Name": "nhlprod2020"
            },
            "vpc_id": "vpc-0c370edad8695a9cc"
          },
          "dependencies": [
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natpub",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7d0c523ac2511aa",
            "id": "nat-0103bfcda76e27d33",
            "network_interface_id": "eni-09b69cb7e7cd480b2",
            "private_ip": "140.0.1.8",
            "public_ip": "54.172.56.112",
            "subnet_id": "subnet-0ee8b1e15d4c9d7d2",
            "tags": {
              "Name": "nhlprod2020"
            }
          },
          "dependencies": [
            "module.networks.aws_eip.testEip3",
            "module.networks.aws_subnet.awsobj1ta",
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test1Public",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04ddf332dcc7ad414",
            "owner_id": "032037257384",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0103bfcda76e27d33",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nhlprod2020"
            },
            "vpc_id": "vpc-0c370edad8695a9cc"
          },
          "dependencies": [
            "module.networks.aws_eip.testEip3",
            "module.networks.aws_nat_gateway.natpub",
            "module.networks.aws_subnet.awsobj1ta",
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test1priva",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d68565bc00bf11a9",
            "owner_id": "032037257384",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0103bfcda76e27d33",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nhlprod2020"
            },
            "vpc_id": "vpc-0c370edad8695a9cc"
          },
          "dependencies": [
            "module.networks.aws_eip.testEip3",
            "module.networks.aws_nat_gateway.natpub",
            "module.networks.aws_subnet.awsobj1ta",
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassa",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ee7bb7b17aaa63b",
            "route_table_id": "rtb-04ddf332dcc7ad414",
            "subnet_id": "subnet-0ee8b1e15d4c9d7d2"
          },
          "dependencies": [
            "module.networks.aws_eip.testEip3",
            "module.networks.aws_nat_gateway.natpub",
            "module.networks.aws_route_table.test1Public",
            "module.networks.aws_subnet.awsobj1ta",
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassb",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c2af807d6ef7b93",
            "route_table_id": "rtb-0d68565bc00bf11a9",
            "subnet_id": "subnet-0a4864752d805b044"
          },
          "dependencies": [
            "module.networks.aws_eip.testEip3",
            "module.networks.aws_nat_gateway.natpub",
            "module.networks.aws_route_table.test1priva",
            "module.networks.aws_subnet.awsobj1ta",
            "module.networks.aws_subnet.awsobj1tb",
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassc",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0269f45c898c246be",
            "route_table_id": "rtb-0d68565bc00bf11a9",
            "subnet_id": "subnet-08831990ebd915e85"
          },
          "dependencies": [
            "module.networks.aws_eip.testEip3",
            "module.networks.aws_nat_gateway.natpub",
            "module.networks.aws_route_table.test1priva",
            "module.networks.aws_subnet.awsobj1ta",
            "module.networks.aws_subnet.awsobj1tc",
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "objawssec1",
      "provider": "module.bastion.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032037257384:security-group/sg-092bad2bad503af3b",
            "description": "ec2 bastion host SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092bad2bad503af3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "rdp",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "ec2bastionrules",
            "name_prefix": null,
            "owner_id": "032037257384",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0c370edad8695a9cc"
          },
          "dependencies": [
            "module.bastion.aws_vpc.aws_obj",
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "addrule1",
      "provider": "module.rds.provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1730778180",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0280d3a548bd96467",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.networks.aws_subnet.awsobj1ta",
            "module.networks.aws_subnet.awsobj1tb",
            "module.networks.aws_vpc.aws_obj",
            "module.rds.aws_db_subnet_group.rds_subgroup",
            "module.rds.aws_rds_cluster.myprivcluster",
            "module.rds.aws_rds_cluster_instance.cluster_instance_1",
            "module.rds.aws_subnet.awsobj1ta",
            "module.rds.aws_subnet.awsobj1tb"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsobj1ta",
      "each": "list",
      "provider": "module.rds.provider.aws"
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsobj1ta",
      "each": "list",
      "provider": "module.bastion.provider.aws"
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsobj1ta",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032037257384:subnet/subnet-0ee8b1e15d4c9d7d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "140.0.1.0/24",
            "id": "subnet-0ee8b1e15d4c9d7d2",
            "map_public_ip_on_launch": false,
            "owner_id": "032037257384",
            "tags": {
              "Name": "nhlprod2020"
            },
            "vpc_id": "vpc-0c370edad8695a9cc"
          },
          "dependencies": [
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsobj1tb",
      "each": "list",
      "provider": "module.rds.provider.aws"
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsobj1tb",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032037257384:subnet/subnet-0a4864752d805b044",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "140.0.2.0/24",
            "id": "subnet-0a4864752d805b044",
            "map_public_ip_on_launch": false,
            "owner_id": "032037257384",
            "tags": {
              "Name": "nhlprod2020"
            },
            "vpc_id": "vpc-0c370edad8695a9cc"
          },
          "dependencies": [
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsobj1tc",
      "each": "list",
      "provider": "module.rds.provider.aws"
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsobj1tc",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032037257384:subnet/subnet-08831990ebd915e85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "140.0.3.0/24",
            "id": "subnet-08831990ebd915e85",
            "map_public_ip_on_launch": false,
            "owner_id": "032037257384",
            "tags": {
              "Name": "nhlprod2020"
            },
            "vpc_id": "vpc-0c370edad8695a9cc"
          },
          "dependencies": [
            "module.networks.aws_vpc.aws_obj"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_obj",
      "each": "list",
      "provider": "module.rds.provider.aws"
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_obj",
      "each": "list",
      "provider": "module.bastion.provider.aws"
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_obj",
      "provider": "module.networks.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:032037257384:vpc/vpc-0c370edad8695a9cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "140.0.0.0/16",
            "default_network_acl_id": "acl-00562b2dd869bb8ed",
            "default_route_table_id": "rtb-0f82aeb19ad38d300",
            "default_security_group_id": "sg-0280d3a548bd96467",
            "dhcp_options_id": "dopt-c92d61b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c370edad8695a9cc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f82aeb19ad38d300",
            "owner_id": "032037257384",
            "tags": {
              "Name": "nhlprod2020"
            }
          }
        }
      ]
    }
  ]
}